Fix rust wrong color for enum

--- a/styles/syntax/rust.less
+++ b/styles/syntax/rust.less
@@ -33,7 +33,7 @@
         font-style: italic;
     }
 
-    .syntax--enum,
+    .syntac--entity.syntax--enum,
     .syntax--support.syntax--constant {
         color: @blue;
         text-decoration: underline;
